Opted for a pure CSS fix for the tabs visibility problem, since the JS solution was prone to errors

--- a/css/input.css
+++ b/css/input.css
@@ -68,8 +68,11 @@
 	padding: 10px 10px 0 10px;
 }
 
-.acf-accordion-group.opened {
+.acf-tab_group-show.acf-accordion-group.opened {
     display: block;
+}
+.acf-tab_group-show.acf-accordion-group.opened .acf-tab_group-hide {
+	display: block;
 }
 
 /* ACF 5 non pro - specific css */
